# pollux

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TESTING.md  codecov.yml  justfile  mkdocs.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs-lint.yml  docs.yml  release.yml  reusable-checks.yml
1.8/: 404.html  index.html  sitemap.xml
1.8/agent-loop/: index.html
1.8/assets/: logo.avif
1.8/building-with-deferred-delivery/: index.html
1.8/caching/: index.html
1.8/concepts/: index.html
1.8/configuration/: index.html
1.8/contributing/: index.html
1.8/conversations-and-agents/: index.html
1.8/error-handling/: index.html
1.8/getting-started/: index.html
1.8/migrating-to-v2/: index.html
1.8/portable-code/: index.html
1.8/search/: search_index.json
1.8/sending-content/: index.html
1.8/source-patterns/: index.html
1.8/structured-data/: index.html
1.8/submitting-work-for-later-collection/: index.html
cookbook/: README.md  __init__.py  __main__.py
cookbook/getting-started/: analyze-single-paper.py  batch-process-files.py  broadcast-process-files.py  conversation-follow-ups.py  extract-image-insights.py  extract-media-insights.py  extract-video-insights.py  run-against-local-model.py  structured-json-robust.py  structured-output-extraction.py  token-estimate-preview.py  youtube-qa-timestamps.py
cookbook/optimization/: cache-warming-and-ttl.py  chunking-large-docs.py  context-caching-explicit.py  efficiency-comparison.py  large-scale-batching.py  large-scale-fan-out.py  long-transcript-chunking.py  multi-format-pipeline.py  run-vs-run-many.py
cookbook/production/: custom-integrations.py  monitoring-telemetry.py  observability-telemetry.py  rate-limits-and-concurrency.py  resume-on-failure.py
cookbook/projects/: fridge-raid.py  paper-to-workshop-kit.py  pokedex-analyst.py  spellbook-sidekick.py  treasure-tailor.py
cookbook/research-workflows/: comparative-analysis.py  content-assessment.py  fact-table-extraction.py  literature-synthesis.py  multi-video-batch.py  multi-video-synthesis.py  system-instructions-with-research-helper.py
cookbook/templates/: custom-schema-template.py  recipe-template.py
cookbook/utils/: data_packs.py  demo_inputs.py  presentation.py  retry.py  runtime.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/agent-loop/: index.html
dev/building-with-deferred-delivery/: index.html
dev/caching/: index.html
dev/concepts/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
dev/conversations-and-agents/: index.html
dev/error-handling/: index.html
dev/getting-started/: index.html
dev/internals/: adapters.md  api-handler-spec.md  index.md  provider-adapters.md  rate-limiting-spec.md  token-counting.md
dev/migrating-to-v2/: index.html
dev/portable-code/: index.html
dev/sending-content/: index.html
dev/source-patterns/: index.html
dev/structured-data/: index.html
dev/submitting-work-for-later-collection/: index.html
docs/: CNAME  about.md  advanced-extensibility.md  agent-loop.md  building-with-deferred-delivery.md  caching-and-efficiency.md  caching.md  concepts.md  configuration.md  contributing.md  conversations-and-agents.md  cookbook.md  error-handling.md  getting-started.md  glossary.md  index.md  migrating-to-v2.md  portable-code.md  quickstart.md  sending-content.md  source-patterns.md  sources-and-patterns.md  structured-data.md  submitting-work-for-later-collection.md  testing-strategy.md  testing.md  tests.md  troubleshooting.md
docs/contributing/: contributing.md  cookbook_authoring.md  docs_style_guide.md
docs/cookbook/: index.md  templates.md
docs/domains/: extensions.md  research.md
docs/explanation/: error-handling.md
docs/guides/: batch-processing.md  caching.md  configuration.md  conversations.md  installation.md  patterns.md  quickstart.md  token-efficiency.md  troubleshooting.md
docs/how-to/: configuration-migration.md  configuration.md  custom-transforms.md  faq.md  installation.md  logging.md  provider-adapters.md  remote-file-materialization.md  source-handling.md  telemetry.md  testing.md  verify-real-api.md
docs/internals/: architecture-rubric.md  architecture.md  chunking.md  configuration-spec.md  pipeline.md  provider-uploads.md  result-builder-spec.md  token-counting-calibration.md
docs/overrides/: home.html
docs/reference/: api.md  caching.md  catalog.md  cli.md  configuration.md  glossary.md  index.md  provider-capabilities.md
docs/stylesheets/: extra.css
hooks/: patch_material_css.py
next/: 404.html  index.html  objects.inv  sitemap.xml
next/agent-loop/: index.html
next/building-with-deferred-delivery/: index.html
next/caching/: index.html
next/concepts/: index.html
next/configuration/: index.html
next/contributing/: index.html
next/conversations-and-agents/: index.html
next/error-handling/: index.html
next/getting-started/: index.html
next/migrating-to-v2/: index.html
next/portable-code/: index.html
next/search/: search_index.json
next/sending-content/: index.html
next/source-patterns/: index.html
next/structured-data/: index.html
next/stylesheets/: home.css
next/submitting-work-for-later-collection/: index.html
notebooks/: week1_batch_processing_demo.ipynb  week3_literature_review_demo.ipynb
scripts/: deferred_delivery_probe.py  demo_data.py  openrouter_pdf_probe.py
src/pollux/: __init__.py  _dev_flags.py  _http.py  _singleflight.py  cache.py  capabilities.py  config.py  constants.py  continuation.py  deferred.py  errors.py  exceptions.py  execute.py  executor.py  frontdoor.py  options.py  parts.py  plan.py  py.typed  (+6 more)
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: conftest.py  helpers.py  test_api.py  test_api_ci_concept.py  test_config.py  test_contracts.py  test_cookbook.py  test_cookbook_contract.py  test_errors.py  test_options_params.py  test_pipeline.py  test_providers.py  test_source.py  verify_injection.py
(+346 files in other folders)
